<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/timerrecord"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:countDown="false"
        android:textSize="16pt"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/recordbutton"
        android:layout_below="@id/timerrecord"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/icon_record_color_action_large"
        android:text="@string/record_start" />

    <Button
        android:id="@+id/recordpausebutton"
        android:layout_below="@id/recordbutton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/icon_pause_color_action_large"
        android:text="@string/record_pause" />

    <Button
        android:id="@+id/recordresumebutton"
        android:layout_below="@id/recordpausebutton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/icon_record_continue_color_action_large"
        android:text="@string/record_resume" />

    <Button
        android:id="@+id/recordstopbutton"
        android:layout_below="@id/recordresumebutton"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/icon_stop_color_action_large"
        android:text="@string/record_stop" />
 
    <Button
        android:id="@+id/recordfolder"
        android:layout_below="@id/recordstopbutton"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#00000000"
        android:textSize="6pt"
        android:drawableLeft="@drawable/icon_save_folder"
        android:text="@string/setting_recordings_folder" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/recordfolder"
        android:gravity="center_horizontal">
 
        <CheckBox
            android:id="@+id/checksoundmic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_audio_record_microphone_sound" />

    </LinearLayout>
</RelativeLayout>
